--- a/app/src/main/res/menu/bottombar_items.xml
+++ b/app/src/main/res/menu/bottombar_items.xml
@@ -3,7 +3,7 @@
     <item android:id="@+id/home"
         android:title=""
         android:icon="@drawable/home"/>
-    <item android:id="@+id/baseline_add_24"
+    <item android:id="@+id/add"
         android:title=""
         android:icon="@drawable/baseline_add_24"/>
     <item android:id="@+id/profile"
